Set the icon size in the stylesheet to avoid too big clunky icons in BorisFX Silhouette.
The sizes appeared the same in Fusion and Maya with this added to the stylesheet (no changes there)

--- a/client/ayon_core/style/style.css
+++ b/client/ayon_core/style/style.css
@@ -23,6 +23,9 @@ Enabled vs Disabled logic in most of stylesheets
     font-family: "Noto Sans";
     font-weight: 450;
     outline: none;
+
+    /* Fix icons in BorisFX Silhouette */
+    icon-size: 16px;
 }
 
 QWidget {
